# py-easyaddress

./: .gitignore  AUTHORS  DESCRIPTION  LICENSE  README.md  README.rst  setup.cfg
data/: dump-countries.json  enums.py
src/: ttt.py
src/easyaddress/: __init__.py  config.py  easyaddress.py  easyaddress_ship.py
src/easyaddress/data/: __init__.py  address.py  address_result.py  email.py  email_result.py  ship.py
src/easyaddress/http/: __init__.py
