[metadata]
name = py-easyaddress
version = 0.0.1
author = easyaddress.io
author_email = api@easyaddress.io
description = Pyton wrapper for easyaddress.io API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sebst/py-easyaddress
project_urls =
    Bug Tracker = https://github.com/sebst/py-easyaddress/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src